<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_student">StudentActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_studentInsert">Insert</string>
</resources>