<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_student"
        android:name="com.example.myapplication.ui.student.StudentFragment"
        android:label="@string/title_activity_student"
        tools:layout="@layout/activity_student2" />
    <fragment
        android:id="@+id/navigation_sInsert"
        android:name="com.example.myapplication.ui.sInsert.SInsertFragment"
        android:label="@string/title_studentInsert"
        tools:layout="@layout/fragment_s_insert" >
        <action
            android:id="@+id/action_navigation_sInsert_to_navigation_student"
            app:destination="@id/navigation_student" />
    </fragment>
</navigation>